# stm32-blink

./: .gitignore  Cargo.toml  memory.x  notes.txt  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
